fix: overflow for home.css

--- a/logistic/static/styles/home.css
+++ b/logistic/static/styles/home.css
@@ -26,6 +26,7 @@ body {
     /* background-color: var(--body-color); */
     min-height: 100vh;
     transition: var(--tran-05);
+    overflow: hidden;
 }
 
 ::selection {
@@ -284,7 +285,7 @@ body.dark .sidebar li a:hover .text {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    overflow-y: scroll;
+    overflow: auto;
 }
 
 .menu-bar::-webkit-scrollbar {
